# anime_speaker_embedding

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/: example.ipynb
src/anime_speaker_embedding/: __init__.py  model.py
